# sentiric-sip-gateway-service

./: .dockerignore  .env.docker  .env.example  .gitignore  Cargo.toml  Dockerfile  LOGIC.md  README.md  TASKS.md  TEST.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.service.yml  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: app.rs  config.rs  error.rs  main.rs  network.rs
src/sip/: handler.rs  message.rs  message_builder.rs  mod.rs  processor.rs  transaction.rs
