[package]
name = "sentiric-sip-gateway-service"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
# Hata yönetimi için standart kütüphaneler
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8" # YENİ SATIR