[package]
name = "sentiric-sip-gateway-service"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
hyper = { version = "0.14", features = ["server", "http1"] }
futures-util = "0.3"